# ssm

./: .dockerignore  .gitignore  .mcp.json  .secrets-whitelist  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DATABASE_SETUP.md  GROK.md  IMPROVEMENT_PLAN.md  LICENSE  LICENSING.md  README.md  THIRD-PARTY-LICENSES.md  WHAT-IT-DOES.md  build.rs  config.test.example  docker-cache-optimize.md  install-hooks.sh  justfile  kill-ports.sh  release.sh  start-dev.sh  test-allowlisted.txt  test-github-protection.txt  test-workflow-scanning.md
.cursor/rules/: keep-a-changelog.mdc  my-custom-rule.mdc
.githooks/: pre-commit
.github/workflows/: docker-publish.yml  ghcr-cleanup.yml  release-docker.yml  security-scan.yml  test-optimized-build.yml
backend/: .dockerignore  .env.example  .htpasswd.example  API_DOCUMENTATION.md  Cargo.toml  Dockerfile  README.md  TESTING_SAFETY_REPORT.md  THIRD-PARTY-LICENSES.md  alembic.ini  askama.toml  build.rs  config.toml.example  git-secure  justfile  migrations_fixed_example.sql  openapi.yaml  pyproject.toml
backend/keys/: id_ssm  id_ssm.pub
backend/migrations/: env.py
backend/migrations/2024-12-30-001554_allow_null_key_fingerprint/: up.sql
backend/migrations/2025-09-06-145959_add_disabled_to_hosts/: down.sql  up.sql
backend/migrations/2025-09-13-132429_add_comment_to_hosts/: down.sql  up.sql
backend/migrations/2025-09-13-150904-0000_add_comment_to_authorizations/: down.sql  up.sql
backend/migrations/2025-09-13-160542_add_comment_to_users/: down.sql  up.sql
backend/migrations/2025-09-13-161303_rename_comment_to_name_add_extra_comment_to_user_keys/: down.sql  up.sql
backend/migrations/2025-10-06-195652-0000_initial_schema/: down.sql  up.sql
backend/migrations/2025-11-22-185130-0000_add_activity_log/: down.sql  up.sql
backend/migrations/versions/: 0001_initial_schema.py
backend/sbom/: ssm-backend.cdx.json
backend/scripts/: enrich_sbom_licenses.py  gen_sbom.sh  gen_third_party_licenses.py  migrate_from_rust.py
backend/src/: activity_logger.rs  api_types.rs  auth_setup.rs  config.rs  database.rs  logging.rs  main.rs  middleware.rs  models.rs  openapi.rs  scheduler.rs  schema.rs  server.rs  ssh_setup.rs
backend/src/db/: host.rs  key.rs  mod.rs  user.rs
backend/src/routes/: activity_log.rs  authentication.rs  authorization.rs  diff.rs  host.rs  key.rs  mod.rs  user.rs
backend/src/ssh/: caching_client.rs  init.rs  mod.rs  sshclient.rs
backend/src/ssm/: __init__.py  activity_logger.py  app.py  config.py  main.py
backend/src/ssm/api/v2/: __init__.py  activity_log.py  auth.py  authorizations.py  diffs.py  hosts.py  info.py  keys.py  users.py
backend/src/ssm/auth/: __init__.py  deps.py  htpasswd.py  jwt.py
backend/src/ssm/core/: __init__.py  envelope.py  errors.py  exception_handlers.py
backend/src/ssm/db/: __init__.py  base.py  deps.py  models.py  preflight.py  session.py
backend/src/ssm/scheduler/: __init__.py  jobs.py  setup.py
backend/src/ssm/ssh/: __init__.py  asyncssh_client.py  caching.py  deps.py  mock.py  protocol.py  safety.py  script_runner.py
backend/src/tests/: README.md  api_types_tests.rs  auth_tests.rs  authorization_tests.rs  basic_tests.rs  complete_workflow_test.rs  database_tests.rs  diff_tests.rs  host_tests.rs  http_auth_tests.rs  http_authentication_tests.rs  http_authorization_tests.rs  http_csrf_tests.rs  http_diff_tests.rs  http_endpoint_auth_protection_tests.rs  http_error_tests.rs  http_host_tests.rs  http_key_tests.rs  http_security_tests.rs  http_session_auth_functional_tests.rs  http_session_auth_tests.rs  http_test_helpers.rs  http_test_utils.rs  http_user_tests.rs  inline_http_tests.rs  integration_tests.rs  key_tests.rs  mock_ssh.rs  mock_ssh_tests.rs  mod.rs  real_http_auth_success.rs  real_http_auth_test.rs  safety.rs  safety_verification.rs  security_first_api_tests.rs  simple_integration_tests.rs  simple_tests.rs  ssh_integration_tests.rs  ssh_tests.rs  test_api.rs  (+4 more)
backend/tests/: test_smoke.py
backend/tests/contract/: conftest.py  test_activity_log_routes.py  test_auth_guard.py  test_auth_routes.py  test_authorizations_routes.py  test_diff_sync_routes.py  test_diffs_routes.py  test_hosts_routes.py  test_keys_routes.py  test_lifespan_scheduler.py  test_openapi_docs.py  test_users_routes.py
backend/tests/integration/: test_asyncssh_real.py
backend/tests/unit/: test_activity_logger.py  test_asyncssh_client.py  test_caching_ssh_client.py  test_config.py  test_envelope.py  test_errors.py  test_exception_handlers.py  test_htpasswd.py  test_jwt.py  test_migrate_from_rust.py  test_migrations.py  test_mock_ssh_client.py  test_models.py  test_scheduler_jobs.py  test_scheduler_setup.py  test_script_runner.py  test_ssh_protocol.py  test_ssh_safety.py
docker/: README.md  compose.prod.yml  compose.yml  docker-compose.adminer.yml  push-to-registry.sh  setup.sh
docker/app/: Dockerfile  health-check.sh  nginx-main.conf  start.sh
docs/: API.md
docs/postman/: ssh-key-manager.json
frontend/: .env.development  .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
plans/: python-backend-rewrite.md
sbom/: ssm-frontend.cdx.json
src/: forms.rs  main.rs  middleware.rs  models.rs  scheduler.rs  sshclient.rs
src/db/: host.rs  mod.rs
src/routes/: auth.rs  authentication.rs  authorization.rs  diff.rs  host.rs  hosts.rs  key.rs  mod.rs  user.rs  users.rs
src/ssh/: caching_client.rs  mod.rs  sshclient.rs
static/: forms.js  style.css
templates/: base.html  components.html  index.html
templates/auth/: login.html
templates/authentication/: login.html  status.html
templates/diff/: assign_key_dialog.htm  authorize_user_dialog.htm  diff.htm  index.html
templates/forms/: form_response.html
templates/hosts/: add_dialog.htm  authorize_user_dialog.htm  delete_dialog.htm  edit_host.html  hostkey_dialog.htm  index.html  list.htm  list_authorizations.htm  show_host.html
templates/keys/: delete_key_dialog.htm  index.html
templates/users/: add_dialog.htm  index.html  (+5 more)
(+79 files in other folders)
