[package]
authors = ["Jeidnx <jeidnx@domainhier.de>"]
edition = "2021"
name = "ssm"
version = "0.0.1-alpha"
description = "Manage your ssh keys from a simple Web UI"
keywords = ["ssh"]
repository = "https://github.com/styliteag/ssm"
readme = "README.md"
license = "GPL-3.0"

[features]
postgres = ["diesel/postgres", "diesel_migrations/postgres"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]

[dependencies]
actix = "0.13"
actix-web = "4.9"
actix-cors = "0.7"
actix-identity = "0.8"
actix-session = { version = "0.10", features = ["cookie-session"] }
cookie = { version = "0.16", features = ["secure"] }
futures-util = "0.3"
color-eyre = { version = "0.6.3", default-features = false }
config = { version = "0.14.0", default-features = false, features = ["toml"] }
diesel = { version = "2.2.0", features = ["sqlite", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
futures = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
russh = "0.50.4"
serde = "1.0.203"
tokio = { version = "1", features = ["full"] }
bcrypt = "0.15"
similar = { version = "2.6.0", features = ["inline"] }
time = "0.3.37"
tokio-cron-scheduler = "0.13.0"
croner = "2.1.0"
serde_json = "1.0.138"
sha2 = "0.10.8"
chrono = "0.4.40"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.8"
serial_test = "3.0"
env_logger = "0.11"
utoipa = { version = "4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "4.0", features = ["actix-web"] }
utoipauto = "0.3.0-alpha.2"
toml = "0.7" # Pin to avoid version conflicts

