[project]
name = "ssm"
version = "0.1.0"
description = "SSH key management server (Python/FastAPI)"
readme = "README.md"
authors = [{ name = "Wim Bonis", email = "wb@stylite.de" }]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.8",
    "sqlalchemy>=2.0",
]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.11",
    "bandit>=1.7",
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "UP", "N", "SIM", "PL", "RUF",
    "ASYNC", "S", "C4", "TCH", "PTH",
]
ignore = ["PLR0913", "S101", "N818", "TC001", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR2004"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_reexport = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
